--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0"
   },
   "devDependencies": {
