--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.21.0"
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.7.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
