--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
